# shell-factory

./: factory-elf.lds
include/: formats.h
include/formats/: elf.h
include/formats/elf/: elf.cc  elf.h
include/pico/: collections.h  concurrency.h  memory.h  process.h  socket.h  string.h
shellcodes/: CMakeLists.txt  exit.cc  hello.cc
